--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles/landing.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
