--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Landing</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles/landing.css" />
   </head>
   <body>
-    <header></header>
+    <header class="hero">
+      <nav>
+        <h3 class="nav-title inter-normal">LOGO</h3>
+        <a href=""><button class="signup-btn">Sign Up</button></a>
+      </nav>
+
+      <div class="hero-description">
+        <p class="raleway-normal">
+          Cool Dark UI Template for Webflow Agencies!
+        </p>
+        <a href=""><button class="signup-btn">Stay Focused</button></a>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
