--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
         <a href=""><button class="signup-btn">Stay Focused</button></a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Action Section -->
+      <div class="action">
+        <div>
+          <h2 class="action-text raleway-normal">See It in Action</h2>
+          <p class="action-des-text raleway-des">
+            Explore the live preview and imagine your brand in this bold new
+            look.
+          </p>
+          <a href=""><button class="signup-btn">Stay Focused</button></a>
+        </div>
+        <img class="action-img" src="Assets/wc-mini.png" alt="" />
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
