--- a/index.html
+++ b/index.html
@@ -37,17 +37,27 @@
     </header>
     <main>
       <!-- Action Section -->
-      <div class="action">
-        <div>
-          <h2 class="action-text raleway-normal">See It in Action</h2>
-          <p class="action-des-text raleway-des">
-            Explore the live preview and imagine your brand in this bold new
-            look.
-          </p>
-          <a href=""><button class="signup-btn">Stay Focused</button></a>
+      <section>
+        <div class="action">
+          <div>
+            <h2 class="action-text raleway-normal">See It in Action</h2>
+            <p class="action-des-text raleway-des">
+              Explore the live preview and imagine your brand in this bold new
+              look.
+            </p>
+            <a href=""><button class="signup-btn">Stay Focused</button></a>
+          </div>
+          <img class="action-img" src="Assets/wc-mini.png" alt="" />
         </div>
-        <img class="action-img" src="Assets/wc-mini.png" alt="" />
-      </div>
+      </section>
+
+      <!-- Users -->
+      <section>
+        <div class="background-color"></div>
+      </section>
+
+      <!-- What our users say -->
+      <section></section>
     </main>
     <footer></footer>
   </body>
