--- a/index.html
+++ b/index.html
@@ -57,8 +57,117 @@
       </section>
 
       <!-- What our users say -->
-      <section></section>
+      <section>
+        <div class="users-say">
+          <!-- section - 1 -->
+          <div>
+            <div class="star-icon">
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+            </div>
+            <h2>Loved by Designers</h2>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="user-image-decoration">
+              <img class="user-image" src="Assets/avatar.png" alt="" />
+              <div>
+                <h4>Reviewer name</h4>
+                <h5>Date</h5>
+              </div>
+            </div>
+          </div>
+          <!-- section - 2 -->
+          <div>
+            <div class="star-icon">
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+            </div>
+            <h2>Loved by Designers</h2>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="user-image-decoration">
+              <img class="user-image" src="Assets/avatar.png" alt="" />
+              <div>
+                <h4>Reviewer name</h4>
+                <h5>Date</h5>
+              </div>
+            </div>
+          </div>
+          <!-- section - 3 -->
+          <div>
+            <div class="star-icon">
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+            </div>
+            <h2>Loved by Designers</h2>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="user-image-decoration">
+              <img class="user-image" src="Assets/avatar.png" alt="" />
+              <div>
+                <h4>Reviewer name</h4>
+                <h5>Date</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="connect-me">
+          <div class="connect-column">
+            <h3 class="section-title raleway-normal">Let’s Get in Touch</h3>
+          </div>
+          <div class="connect-column">
+            <form action="">
+              <label for="email">Email</label>
+              <input type="email" name="" id="email" placeholder="Your Email" />
+              <label for="name">Name</label>
+              <input type="text" name="" id="name" placeholder="Your name" />
+              <label for="message">Message</label>
+              <textarea
+                name=""
+                id=""
+                cols="30"
+                rows="5"
+                placeholder="Message"
+              ></textarea>
+              <input class="signup-btn" type="submit" value="Submit" />
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="footer-content">
+          <h3 class="footer-logo nav-title inter-normal">LOGO</h3>
+          <div>
+            <p>
+              Ready to elevate your online presence? Contact us today to discuss
+              your project and discover how we can bring your vision to life.
+            </p>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">How to Works</a></li>
+              <li><a href="">Sercices</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
