--- a/index.html
+++ b/index.html
@@ -53,7 +53,26 @@
 
       <!-- Users -->
       <section>
-        <div class="background-color"></div>
+        <div class="background-color">
+          <div class="joined">
+            <h3 class="font-h3 raleway-normal">
+              Joined Thousands of Productive Users
+            </h3>
+            <div class="user-count">
+              <ul class="inter-normal">
+                <li>50K</li>
+
+                <li>2M+</li>
+                <li>95%</li>
+              </ul>
+            </div>
+            <div class="user-count-des">
+              <p>Active Users</p>
+              <p>Focuse Sessions</p>
+              <p>Satisfaction Rate</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- What our users say -->
