--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
     <header class="hero">
       <nav>
         <h3 class="nav-title inter-normal">LOGO</h3>
-        <a href=""><button class="signup-btn">Sign Up</button></a>
+        <a href=""><button class="signup-btn btn-text">Sign Up</button></a>
       </nav>
 
       <div class="hero-description">
         <p class="raleway-normal">
           Cool Dark UI Template for Webflow Agencies!
         </p>
-        <a href=""><button class="signup-btn">Stay Focused</button></a>
+        <a href=""
+          ><button class="hero-btn hero-btn-text raleway-normal">
+            Stay Focused
+          </button></a
+        >
       </div>
     </header>
     <main>
