--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
       <!-- Action Section -->
       <section>
         <div class="action">
-          <div>
+          <div class="action-p">
             <h2 class="action-text raleway-normal">See It in Action</h2>
             <p class="action-des-text raleway-des">
               Explore the live preview and imagine your brand in this bold new
               look.
             </p>
-            <a href=""><button class="signup-btn">Stay Focused</button></a>
+            <a href=""
+              ><button class="launch-btn">Launch Live Preview</button></a
+            >
           </div>
           <img class="action-img" src="Assets/wc-mini.png" alt="" />
         </div>
@@ -70,7 +72,7 @@
                 <li>95%</li>
               </ul>
             </div>
-            <div class="user-count-des">
+            <div class="user-count-des inter-normal">
               <p>Active Users</p>
               <p>Focuse Sessions</p>
               <p>Satisfaction Rate</p>
@@ -81,9 +83,10 @@
 
       <!-- What our users say -->
       <section>
+        <h2 class="our-user raleway-normal">What our users say</h2>
         <div class="users-say">
           <!-- section - 1 -->
-          <div>
+          <div class="box">
             <div class="star-icon">
               <img src="Assets/icon-star.png" alt="" />
               <img src="Assets/icon-star.png" alt="" />
@@ -104,7 +107,7 @@
             </div>
           </div>
           <!-- section - 2 -->
-          <div>
+          <div class="box">
             <div class="star-icon">
               <img src="Assets/icon-star.png" alt="" />
               <img src="Assets/icon-star.png" alt="" />
@@ -125,7 +128,7 @@
             </div>
           </div>
           <!-- section - 3 -->
-          <div>
+          <div class="box">
             <div class="star-icon">
               <img src="Assets/icon-star.png" alt="" />
               <img src="Assets/icon-star.png" alt="" />
@@ -155,11 +158,16 @@
           </div>
           <div class="connect-column">
             <form action="">
-              <label for="email">Email</label>
-              <input type="email" name="" id="email" placeholder="Your Email" />
-              <label for="name">Name</label>
-              <input type="text" name="" id="name" placeholder="Your name" />
-              <label for="message">Message</label>
+              <label class="label inter-normal" for="email">Email</label>
+              <input
+                type="email"
+                name=""
+                id="email"
+                placeholder="example@email.com"
+              />
+              <label class="label inter-normal" for="name">Name</label>
+              <input type="text" name="" id="name" placeholder="full name" />
+              <label class="label inter-normal" for="message">Message</label>
               <textarea
                 name=""
                 id=""
@@ -167,7 +175,7 @@
                 rows="5"
                 placeholder="Message"
               ></textarea>
-              <input class="signup-btn" type="submit" value="Submit" />
+              <input class="touch-btn" type="submit" value="Get in Touch" />
             </form>
           </div>
         </div>
@@ -178,7 +186,7 @@
         <div class="footer-content">
           <h3 class="footer-logo nav-title inter-normal">LOGO</h3>
           <div>
-            <p>
+            <p class="footer-p">
               Ready to elevate your online presence? Contact us today to discuss
               your project and discover how we can bring your vision to life.
             </p>
