--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
               <img src="Assets/icon-star.png" alt="" />
               <img src="Assets/icon-star.png" alt="" />
             </div>
-            <h2>Loved by Designers</h2>
-            <p>
+            <h2 class="loved-design">Loved by Designers</h2>
+            <p class="temp">
               This template instantly leveled up our presence.” – Studio Vertex
             </p>
             <div class="user-image-decoration">
@@ -115,8 +115,8 @@
               <img src="Assets/icon-star.png" alt="" />
               <img src="Assets/icon-star.png" alt="" />
             </div>
-            <h2>Loved by Designers</h2>
-            <p>
+            <h2 class="loved-design">Loved by Designers</h2>
+            <p class="temp">
               This template instantly leveled up our presence.” – Studio Vertex
             </p>
             <div class="user-image-decoration">
@@ -136,8 +136,8 @@
               <img src="Assets/icon-star.png" alt="" />
               <img src="Assets/icon-star.png" alt="" />
             </div>
-            <h2>Loved by Designers</h2>
-            <p>
+            <h2 class="loved-design">Loved by Designers</h2>
+            <p class="temp">
               This template instantly leveled up our presence.” – Studio Vertex
             </p>
             <div class="user-image-decoration">
