--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <header class="hero">
+      <div></div>
       <nav>
         <h3 class="nav-title inter-normal">LOGO</h3>
         <a href=""><button class="signup-btn btn-text">Sign Up</button></a>
